--- a/src/components/Feature.css
+++ b/src/components/Feature.css
@@ -23,5 +23,5 @@
 }
 
 .feature-image {
-    width:300px;
+    width:250px;
 }
