--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    width: 100vw;
+    width: 100%;
     min-width: 600px;
     padding: 35px 0;
     background-color: black;
